update: added new folders

--- a/cards/index.html
+++ b/cards/index.html
@@ -8,12 +8,24 @@
 </head>
 <body>
     <div id="cards">
-        <div class="card"></div>
-        <div class="card"></div>
-        <div class="card"></div>
-        <div class="card"></div>
-        <div class="card"></div>
-        <div class="card"></div>
+        <div class="card">
+            <div class="card-content"></div>
+        </div>
+        <div class="card">
+            <div class="card-content"></div>
+        </div>
+        <div class="card">
+            <div class="card-content"></div>
+        </div>
+        <div class="card">
+            <div class="card-content"></div>
+        </div>
+        <div class="card">
+            <div class="card-content"></div>
+        </div>
+        <div class="card">
+            <div class="card-content"></div>
+        </div>
     </div>
     <script type="module" src="script.js"></script>
 </body>
